--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://goldrevboy.github.io/"
+baseURL = "https://goldrevboy.github.io/my-portfolio/"
 title = "Parth Dabas"
 languageCode = "en-us"
 theme = "coder"
